# mini-sfm

./: .dockerignore  CMakeLists.txt  Dockerfile
src/: main.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/geometry/: CMakeLists.txt  keypoint.cpp  keypoint.h  point3D.cpp  point3D.h
src/image/: CMakeLists.txt  image.h
src/io/: CMakeLists.txt  image_loader.cpp  image_loader.h
src/matching/: CMakeLists.txt  bf_matcher.cpp  bf_matcher.h  matcher.h
src/pose_estimator/: CMakeLists.txt  pose_estimator.cpp  pose_estimator.h
src/verification/: CMakeLists.txt  geometric_verifier.cpp  geometric_verifier.h
tests/: test_bf_matcher.cpp  test_camera.cpp  test_image.cpp  test_image_loader.cpp  test_keypoint.cpp  test_point3D.cpp
